[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiowhales"
version = "0.1.0"
description = "Async-native Python library for interacting with Docker"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]
