[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiowhales"
version = "0.1.0"
description = "Async-native Python library for interacting with Docker"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Guy Sharir" },
]
keywords = [
    "docker",
    "async",
    "asyncio",
    "containers",
    "docker-api",
    "aiohttp",
    "devops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/GuySharir/aiowhales"
Repository = "https://github.com/GuySharir/aiowhales"
Issues = "https://github.com/GuySharir/aiowhales/issues"
Changelog = "https://github.com/GuySharir/aiowhales/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["aiowhales"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring a running Docker daemon",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
ignore = [
    "A002",   # argument shadowing builtins (id, all) — natural Docker API names
    "N818",   # exception naming — ContainerNotFound reads better than ContainerNotFoundError
]
